apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__root_type_fragment@report.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: generated
---
result:
  statsReportKey: "# SomeQuery\nquery SomeQuery{noInputQuery{enumResponse}...on Query{...{basicResponseQuery{id}}}}"
  referencedFieldsByType:
    BasicResponse:
      fieldNames:
        - id
      isInterface: false
    EverythingResponse:
      fieldNames:
        - enumResponse
      isInterface: false
    Query:
      fieldNames:
        - basicResponseQuery
        - noInputQuery
      isInterface: false
